# site

./: .gitignore  404.html  about.html  dcc.html  index.html  intercoder_reliability.html  mkdocs.yml  models.html  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
backend/: app.py
blog/: index.html
blog/2024/01/11/: releasing-munin-7b-alpha---a-danish-llm.html
blog/2024/02/02/: tutorial-finetuning-language-models.html  tutorial-merging-language-models.html
blog/2024/07/04/: datakilder.html
blog/2024/07/09/: datahåndtering.html
blog/2024/07/21/: the-imperative-of-danish-foundation-models-bridging-the-linguistic-ai-divide.html
blog/archive/: 2024.html
css/: index.css
datasheets/: augmented_dagw.html  dagw-adl.html  dagw-botxt.html  dagw-dannet.html  dagw-depbank.html  dagw-ep.html  dagw-ft.html  dagw-gutenberg.html  dagw-hest.html  dagw-jvj.html  dagw-naat.html  dagw-relig.html  dagw-retsinformationdk.html  dagw-retspraksis.html  dagw-skat.html  dagw-spont.html  dagw-synne.html  dagw-tv2r.html  dagw-wiki.html  dagw-wikibooks.html  dagw-wikisource.html  danews.html  danews2.0.html  daradio.html  dbc-abstracts.html  dbc-faktalink.html  dbc-forfatterweb.html  dbc-reviews.html  hopetwitter.html  memo.html  netarkivet_text.html  nordjylland_news.html  scrape_hovedstaden.html  swedish_gigaword.html
scripts/: backend.sh  landing.sh
search/: search_index.json
taggers_stats/: taggers_speed.html
tutorials/: finetune.html  finetune_qlora.html  merge.html
