[project]
name = "danish-foundation-models"
version = "0.2.0"
description = "The website for Danish Foundation Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-jupyter==0.24.6",
    "mkdocs-material==9.5.3",
    "mkdocstrings[python]==0.24.0",
    "flask==3.1.0",
    "flask-cors==6.0.0",
    "flask-limiter==3.12",
    "flask-mail==0.10.0",
    "gunicorn==23.0.0",
]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
packages = ["backend"]
